// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Network not render a network 1`] = `
<section
  className="wrapper network-status"
>
  <span
    className="status online"
  />
  <p>
    Connected to:
    <span>
      mainnet
    </span>
    <span
      className="peer"
    />
  </p>
</section>
`;

exports[`Network renders nethash option as DEVNET 1`] = `
<section
  className="wrapper network-status"
>
  <span
    className="status offline"
  />
  <p>
    Connected to:
    <span>
      devnet
    </span>
    <span
      className="peer"
    />
  </p>
</section>
`;

exports[`Network renders nethash option as MAINNET 1`] = `
<section
  className="wrapper network-status"
>
  <span
    className="status online"
  />
  <p>
    Connected to:
    <span>
      mainnet
    </span>
    <span
      className="peer"
    />
  </p>
</section>
`;

exports[`Network renders nethash option as TESTNET 1`] = `
<section
  className="wrapper network-status"
>
  <span
    className="status online"
  />
  <p>
    Connected to:
    <span>
      testnet
    </span>
    <span
      className="peer"
    />
  </p>
</section>
`;

exports[`Network renders status OFFLINE 1`] = `
<section
  className="wrapper network-status"
>
  <span
    className="status offline"
  />
  <p>
    Connected to:
    <span>
      devnet
    </span>
    <span
      className="peer"
    />
  </p>
</section>
`;

exports[`Network renders status ONLINE 1`] = `
<section
  className="wrapper network-status"
>
  <span
    className="status online"
  />
  <p>
    Connected to:
    <span>
      devnet
    </span>
    <span
      className="peer"
    />
  </p>
</section>
`;
